# scripts

./: +favicon  +launcher  .gitignore  _devcleanup  aria-anna  avifs  ccpm  cf-r2-billing-debug.py  cf-r2-single-bucket.py  cf-r2-usage.py  cf-tunnel-dns  chappy2  compare-faststart  compress-screenrec  cvwatch  ddb.py  docker-pull  dp  duck-jar  duckdb-jetbrains  duckdb-ui  duck»  dynocsv  ffprobe_sum_times  flightsfrom  flightsfrom1  getreqd  gh-install  git-ignore-globally  git-latest-tag  gitfetchall  gitl  gitllm  gitllm.py  gitpullall  globs  glot  glotmon  gtlds.py  heic  (+47 more)
_launchd/: battery_check.sh  battery_status.sh
stitch-rust/: Cargo.toml
stitch-rust/src/: main.rs
