[package]
name = "stitch-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "tiff", "avif"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tempfile = "3.13"
jxl-oxide = "0.11"

[profile.release]
lto = true
codegen-units = 1
strip = true
